style: set theme select font family to monospace to ensure perfect right alignment of color square emojis

--- a/css/constructor.css
+++ b/css/constructor.css
@@ -241,6 +241,7 @@ html, body { height: 100%; font-family: -apple-system, BlinkMacSystemFont, 'Sego
 }
 .theme-select {
     width: 100%;
+    font-family: Consolas, Monaco, "Lucida Console", "Liberation Mono", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Courier New", monospace;
     font-size: 12px;
     font-weight: 500;
     padding: 6px;
